k8s-ingress/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: actuator-svc
spec:
  selector:
    pod: actuator-pod
  ports:
    - port: 8080
      name: http-web-svc
