k8s-ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actuator-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /spring-actuator/$2
spec:
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            path: /test(/|$)(.*)
            backend:
              service:
                name: actuator-svc
                port:
                  name: http-web-svc
